# ImageHandler

./: CMakeLists.txt  ImageHandler.sln
ImageHandler/: CMakeLists.txt  ImageHandler.vcxproj  ImageLoader.ixx  Source.cpp  vcpkg.json
Test/: CMakeLists.txt  ImageHandlerTests.cpp
cmake/: LoadStb.cmake
